# OpenEnv-Sentinel

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Pipfile  README.md  UI_GUIDE.md  USER_GUIDE.md  __init__.py  client.py  conftest.py  inference.py  models.py  openenv.yaml  pyproject.toml
grading/: grader.py  rewards.py
human_experience/: human_play.py
openspec/: config.yaml
scenarios/: __init__.py  base.py  task1_smoking_gun.py  task2_upstream_culprit.py  task3_cascading_failure.py  task4_ddos_attack.py  task5_flash_sale_spike.py
server/: app.py  requirements.txt  sentinel_environment.py
tests/: conftest.py  test_environment.py  test_grading.py  test_models.py  test_tools.py
tools/: registry.py
traces/: explainability_trace_20260426_072634.json  explainability_trace_20260426_073011.json  explainability_trace_20260426_073133.json  explainability_trace_20260426_192357.json  explainability_trace_20260426_192829.json  explainability_trace_20260426_193047.json  explainability_trace_20260426_202651.json  explainability_trace_20260426_203707.json  explainability_trace_20260427_073518.json  explainability_trace_20260427_073825.json  explainability_trace_20260427_075548.json  explainability_trace_20260427_080350.json  explainability_trace_20260427_080713.json  explainability_trace_20260427_175338.json  explainability_trace_20260428_050005.json  explainability_trace_20260501_131956.json  explainability_trace_20260501_143334.json  explainability_trace_20260501_185153.json  explainability_trace_20260501_194340.json
ui/backend/: app.py  config.py  routes.py  (+3 more)
(+54 files in other folders)
